backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: harinee11/mern-backend:latest  # Replace with your actual backend image
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: uploads-volume
          mountPath: /backend/uploads
      volumes:  # This must be at the same level as `containers`
      - name: uploads-volume
        persistentVolumeClaim:
          claimName: backend-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mern-app
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
