frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mern-app
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP
